--- a/tl-website-demo/assets/css/main.css
+++ b/tl-website-demo/assets/css/main.css
@@ -153,24 +153,6 @@ footer {
     padding-bottom: 1em;
 }
 
-.subscription-form {
-    margin-top: 1em;
-    padding-bottom: 1em;
-}
-
-
-.social-footer {
-    margin-top: .2em;
-    list-style: none;
-    font-size: 1.6em;
-    padding-bottom: 1em;
-    text-align: right;
-    padding-right: 1em;
-}
-
-.social-footer-item {
-    margin: 2rem 0;
-}
 
 .social-icon {
     color: #D2D7D3;
@@ -181,3 +163,21 @@ footer {
 .social-icon.ion-social-twitter:hover { color: #28ABDB; }
 .social-icon.ion-social-facebook:hover { color: #2D3A8B; }
 .social-icon.ion-social-googleplus:hover { color: #DB483E; }
+
+@media screen
+and (max-width: 600px)
+{
+
+    .social-footer > li > a > span {
+        display: none; /* remove text for social media */
+    }
+
+    .social-icon {
+        font-size: 2em;
+    }
+
+    .social-icon.ion-social-github { color: #000; }
+    .social-icon.ion-social-twitter { color: #28ABDB; }
+    .social-icon.ion-social-facebook { color: #2D3A8B; }
+    .social-icon.ion-social-googleplus { color: #DB483E; }
+}
