--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,9 @@
 <meta name="twitter:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 <meta name="twitter:creator" content="@{{ site.owner.twitter }}">{% endif %}
 
+<!-- Facebook Authority -->
+<meta property="article:author" content="https://www.facebook.com/aldo.ziflaj" />
+
 <!-- Open Graph -->
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="article">
