--- a/_includes/head.html
+++ b/_includes/head.html
@@ -171,17 +171,17 @@
     })(document, "script", "dhm");
   </script>
   <!-- buy me a coffeee -->
-  <script
+  <script 
     data-name="BMC-Widget"
     src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
-    data-id="sujaykundu"
+    data-id="aziflaj"
     data-description="Support me on Buy me a coffee!"
-    data-message=""
-    data-color="#FF813F"
-    data-position="right"
-    data-x_margin="10"
-    data-y_margin="10"
-  ></script>
+    data-message="I appreciate you reading my blog. If you like the content, you can buy me a coffee and I'll produce more content"
+    data-color="#FF5F5F"
+    data-position="Right"
+    data-x_margin="18"
+    data-y_margin="18">
+</script>
 
   <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
   <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
