--- a/_includes/contact_me_form.html
+++ b/_includes/contact_me_form.html
@@ -2,15 +2,15 @@
 <form action="https://formspree.io/{{ site.formspree_email }}" method="POST" >
     <div class="form-group">
       <label for="contact_form_name">Your Name :</label>
-      <input type="text" class="form-control" name="name" id="contact_form_name" placeholder="Enter Your Name">
+      <input type="text" class="form-control" name="name" id="contact_form_name" placeholder="Who are you?">
      </div>
      <div class="form-group">
        <label for="contact_form_email">Your Email :</label>
-      <input type="email" class="form-control" name="_replyto" id="contact_form_email" placeholder="Enter Your Email">
+      <input type="email" class="form-control" name="_replyto" id="contact_form_email" placeholder="Where can I contact you?">
      </div>
      <div class="form-group">
        <label for="contact_form_message"> Your Message :</label>
-      <textarea name="_message" class="form-control" id="contact_form_message" placeholder="Enter Your Message"></textarea>
+      <textarea name="_message" class="form-control" id="contact_form_message" placeholder="Please be as detailed as you can"></textarea>
      </div>
       <button type="submit" value="Send" class="btn btn-lg btn-dark">Submit</button>
  </form>
