--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -32,7 +32,9 @@
     />
     <br/>
     <br/>
-    {{ content }}
+    <div class="article-content">
+      {{ content }}
+    </div>
     <br/>
     {%- include share_page.html -%}
   </div>
