--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,47 +8,56 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   {% if page.summary %}
   <meta name="description"
-        content="{{ page.summary | escape }}- {% if {page.title %}{{ page.title }}{% else %}{{ site.description }}{% endif %}">
+        content="{{ page.summary | escape }} - {% if {page.title %}{{ page.title }}{% else %}{{ site.description }}{% endif %}">
   {% endif %}
   <meta name="keywords"
         content="{% if page.title %}{{ page.title }}, {{ site.title }}, {% for categ in page.categories %}{{ categ }}{% if forloop.last == false %}, {% endif %}{% endfor %}{% else %}{{ site.title }}, {% for category in site.categories %}{% capture categories_slug %}{{ category | first }}{% endcapture %}{% for categ in categories_slug %}{{ categ }}{% endfor %}{% if forloop.last == false %}, {% endif %}{% endfor %}{% endif %},{{ page.keywords | escape }}"/>
 
-  <link
-      rel="alternate"
-      type="application/rss+xml"
-      title="RSS"
-      href="/feed.xml"
-  />
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml" />
   <meta content="{{ site.share.fb_appid }}" property="fb:app_id"/>
   <meta content="{{ site.title }}" property="og:site_name"/>
   {% if page.noindex %}
-  <meta name="robots" content="noindex"/>
-  {% endif %} {% if page.title %}
-  <meta content="{{ page.title }}" property="og:title"/>
-  <meta content="article" property="og:type"/>
+    <meta name="robots" content="noindex"/>
+  {% endif %}
+
+  {% if page.title %}
+    <meta content="{{ page.title }}" property="og:title"/>
+    <meta content="article" property="og:type"/>
   {% else %}
-  <meta content="{{ site.title }}" property="og:title"/>
-  <meta content="website" property="og:type"/>
-  {% endif %} {% if page.summary %}
-  <meta content="{{ page.summary }}" property="og:description"/>
+    <meta content="{{ site.title }}" property="og:title"/>
+    <meta content="website" property="og:type"/>
+  {% endif %}
+
+  {% if page.summary %}
+    <meta content="{{ page.summary }}" property="og:description"/>
   {% else %}
-  <meta content="{{ site.description }}" property="og:description"/>
-  {% endif %} {% if page.url %}
-  <meta content="{{ site.url }}{{ page.url }}" property="og:url"/>
-  {% endif %} {% if page.date %}
-  <meta
-      content="{{ page.date | date_to_xmlschema }}"
-      property="article:published_time"
-  />
-  <meta content="{{ site.url }}/about/" property="article:author"/>
-  {% endif %} {% if page.thumbnail %}
-  <meta content="{{ site.url }}{{ page.thumbnail }}" property="og:image"/>
-  {% endif %} {% if page.categories %} {% for category in page.categories
-  limit:1 %}
-  <meta content="{{ category }}" property="article:section"/>
-  {% endfor %} {% endif %} {% if page.tags %} {% for tag in page.tags %}
-  <meta content="{{ tag }}" property="article:tag"/>
-  {% endfor %} {% endif %}
+    <meta content="{{ site.description }}" property="og:description"/>
+  {% endif %}
+
+  {% if page.url %}
+    <meta content="{{ site.url }}{{ page.url }}" property="og:url"/>
+  {% endif %}
+
+  {% if page.date %}
+    <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time"/>
+    <meta content="{{ site.url }}/about/" property="article:author"/>
+  {% endif %}
+
+  {% if page.thumbnail %}
+    <meta content="{{ site.url }}{{ page.thumbnail }}" property="og:image"/>
+  {% endif %}
+
+  {% if page.categories %}
+    {% for category in page.categories limit:1 %}
+      <meta content="{{ category }}" property="article:section"/>
+    {% endfor %}
+  {% endif %}
+
+  {% if page.tags %}
+    {% for tag in page.tags %}
+      <meta content="{{ tag }}" property="article:tag"/>
+    {% endfor %}
+  {% endif %}
 
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary"/>
@@ -56,34 +65,27 @@
   <meta name="twitter:creator" content="@{{ site.share.twitter_username }}"/>
 
   {% if page.title %}
-  <meta name="twitter:title" content="{{ page.title }}"/>
+    <meta name="twitter:title" content="{{ page.title }}"/>
   {% else %}
-  <meta name="twitter:title" content="{{ site.title }}"/>
+    <meta name="twitter:title" content="{{ site.title }}"/>
   {% endif %}
 
   {% if page.url %}
-  <meta name="twitter:url" content="{{ site.url }}{{ page.url }}"/>
-  {% endif %} {% if page.summary %}
-  <meta name="twitter:description" content="{{ page.summary }}"/>
+    <meta name="twitter:url" content="{{ site.url }}{{ page.url }}"/>
+  {% endif %}
+  {% if page.summary %}
+    <meta name="twitter:description" content="{{ page.summary }}"/>
   {% else %}
-  <meta name="twitter:description" content="{{ site.description }}"/>
-  {% endif %} {% if page.header-img %}
-  <meta
-      name="twitter:image:src"
-      content="{{ site.url }}{{ page.thumbnail }}"
-  />
+    <meta name="twitter:description" content="{{ site.description }}"/>
+  {% endif %}
+  {% if page.header-img %}
+    <meta name="twitter:image:src" content="{{ site.url }}{{ page.thumbnail }}" />
   {% endif %}
 
   <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/assets/css/main.css"/>
   <!-- <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/assets/css/custom-style.css" /> -->
-  <link
-      rel="stylesheet"
-      href="{{site.url}}{{site.baseurl}}/assets/bower_components/lightgallery/dist/css/lightgallery.min.css"
-  />
-  <link
-      rel="stylesheet"
-      href="https://cdn.snipcart.com/themes/v3.0.0-beta.3/default/snipcart.css"
-  />
+<!--  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightgallery@1.9.0/dist/css/lightgallery.min.css" integrity="sha256-L17StzR9gFWAuelz9D9pmNDTieyml52nv+rPNRrncr0=" crossorigin="anonymous">-->
+  <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.0-beta.3/default/snipcart.css"/>
   <link
       rel="stylesheet"
       href="{{site.url}}{{site.baseurl}}/assets/bower_components/bootstrap/dist/css/bootstrap.min.css"
@@ -95,11 +97,6 @@
   <link
       rel="stylesheet"
       href="{{site.url}}{{site.baseurl}}/assets/bower_components/icono/dist/icono.min.css"
-  />
-  <!-- Fonts-->
-  <link
-      href="https://fonts.googleapis.com/css?family=Quicksand&display=swap"
-      rel="stylesheet"
   />
   <!-- Favicon -->
   <link
@@ -125,8 +122,8 @@
       src="{{site.url}}{{site.baseurl}}/assets/bower_components/jquery-mousewheel/jquery.mousewheel.min.js"></script>
   <script
       src="{{site.url}}{{site.baseurl}}/assets/bower_components/ghosthunter/dist/jquery.ghostHunter.min.js"></script>
-  <script
-      src="{{site.url}}{{site.baseurl}}/assets/bower_components/lightgallery/dist/js/lightgallery-all.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/lightgallery@1.9.0/dist/js/lightgallery-all.min.js" integrity="sha256-L+HNbTXuvrYJXBzJtMYaRdwiaJjIDsfowU4y473jYaM=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.2/picturefill.min.js"></script>
   <script src="{{site.url}}{{site.baseurl}}/assets/bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="{{site.url}}{{site.baseurl}}/assets/bower_components/nanobar/nanobar.min.js"></script>
