--- a/_includes/ads.html
+++ b/_includes/ads.html
@@ -1,1 +1,2 @@
 <!-- Add Google Adsense Ad Code here-->
+<script data-ad-client="ca-pub-2433653602203982" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
