--- a/_includes/head.html
+++ b/_includes/head.html
@@ -116,7 +116,7 @@
   <script src="{{site.url}}{{site.baseurl}}/assets/js/search.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-
+  {%- include ads.html -%}
   <!-- for Mathjax support -->
   {% if page.usemathjax %}
   <script type="text/x-mathjax-config">
