--- a/_includes/contact_me_form.html
+++ b/_includes/contact_me_form.html
@@ -1,5 +1,5 @@
 <!-- Replace the email with your own formspree email -->
-<form action="https://formspree.io/{{ site.formspree_email }}" method="POST" >
+<form action="https://formspree.io/f/{{ site.formspree_email }}" method="POST" >
     <div class="form-group">
       <label for="contact_form_name">Your Name:</label>
       <input type="text" class="form-control" name="name" id="contact_form_name" placeholder="Who are you?">
