--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
     site.subtitle }}{% endif %}
   </title>
   <meta http-equip="X-UA-Compatible" content="IE=edge"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   {% if page.summary %}
   <meta name="description"
         content="{{ page.summary | escape }} - {% if {page.title %}{{ page.title }}{% else %}{{ site.description }}{% endif %}">
