--- a/_includes/head.html
+++ b/_includes/head.html
@@ -117,6 +117,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   {%- include ads.html -%}
+  {%- include gtags.html -%}
   <!-- for Mathjax support -->
   {% if page.usemathjax %}
   <script type="text/x-mathjax-config">
