--- a/themes/terminal/layouts/_default/index.html
+++ b/themes/terminal/layouts/_default/index.html
@@ -15,48 +15,50 @@
     {{ $paginator := .Paginate (where $PageContext.RegularPages "Type" $contentTypeName) }}
 
     {{ range $paginator.Pages }}
-      <div class="post on-list">
-        <h1 class="post-title">
-          <a href="{{ .Permalink }}">{{ .Title | markdownify }}</a>
-        </h1>
-        <div class="post-meta">
-          <span class="post-date">
-            {{ .Date.Format "2006-01-02" }}
-          </span>
-          {{ with .Params.Author }}
-            <span class="post-author">:: {{ . }}</span>
-          {{ end }}
-        </div>
-
-        {{ if .Params.tags }}
-          <span class="post-tags">
-            {{ range .Params.tags }}
-            #<a href="{{ (urlize (printf "tags/%s/" . )) | absLangURL }}">
-              {{- . -}}
-            </a>&nbsp;
+      {{ if not (ge .Date.Unix now.Unix) }}
+        <div class="post on-list">
+          <h1 class="post-title">
+            <a href="{{ .Permalink }}">{{ .Title | markdownify }}</a>
+          </h1>
+          <div class="post-meta">
+            <span class="post-date">
+              {{ .Date.Format "2006-01-02" }}
+            </span>
+            {{ with .Params.Author }}
+              <span class="post-author">:: {{ . }}</span>
             {{ end }}
-          </span>
-        {{ end }}
+          </div>
 
-
-        {{ partial "cover.html" . }}
-
-
-        <div class="post-content">
-          {{ if .Params.showFullContent }}
-            {{ .Content }}
-          {{ else if .Description }}
-            {{ .Description | markdownify }}
-          {{ else }}
-            {{ .Summary | markdownify }}
+          {{ if .Params.tags }}
+            <span class="post-tags">
+              {{ range .Params.tags }}
+              #<a href="{{ (urlize (printf "tags/%s/" . )) | absLangURL }}">
+                {{- . -}}
+              </a>&nbsp;
+              {{ end }}
+            </span>
           {{ end }}
-        </div>
 
-        {{ if not .Params.showFullContent }}
-        <div>
-          <a class="read-more button"
-            href="{{.RelPermalink}}">{{ $.Site.Params.ReadMore }} →</a>
-        </div>
+
+          {{ partial "cover.html" . }}
+
+
+          <div class="post-content">
+            {{ if .Params.showFullContent }}
+              {{ .Content }}
+            {{ else if .Description }}
+              {{ .Description | markdownify }}
+            {{ else }}
+              {{ .Summary | markdownify }}
+            {{ end }}
+          </div>
+
+          {{ if not .Params.showFullContent }}
+          <div>
+            <a class="read-more button"
+              href="{{.RelPermalink}}">{{ $.Site.Params.ReadMore }} →</a>
+          </div>
+          {{ end }}
         {{ end }}
       </div>
     {{ end }}
