--- a/themes/terminal/layouts/partials/footer.html
+++ b/themes/terminal/layouts/partials/footer.html
@@ -15,6 +15,8 @@
 <script src="{{ "assets/main.js" | absURL }}"></script>
 <script src="{{ "assets/prism.js" | absURL }}"></script>
 
+{{ partial "buymeacoffee.html" }}
+
 {{ if $.Site.Params.showLanguageSelector }}
   <script src="{{ "assets/languageSelector.js" | absURL }}"></script>
 {{ end }}
