--- a/themes/terminal/layouts/_default/single.html
+++ b/themes/terminal/layouts/_default/single.html
@@ -45,6 +45,8 @@
     {{- end -}}
   </div>
 
+  {{ partial "rlfo.html" }}
+
   {{ if eq .Type $.Site.Params.contentTypeName }}
   {{ partial "posts_pagination.html" . }}
   {{ end }}
