facelift on rlfo

--- a/layouts/partials/rlfo.html
+++ b/layouts/partials/rlfo.html
@@ -1,24 +1,11 @@
 <div class="newsletter">
-    <div class="pagination__title">
-        <span class="pagination__title-h">Are you reading RLFO?</span>
-        <hr />
-    </div>
-    <div>
-If you like my blog posts, you might also like my newsletter.
-I share articles, conference talks, reading material about Software Shenanigans
-<!--, Hardware Hocus-pocusness -->
-and Computer Craziness.
-Subscribe to 
-<a href="https://rlfo.substack.com/" target="_blank">Random Links Found Online</a>
-and get the latest issue delivered straight to your inbox.
-    </div>
+  <blockquote>
+    <p>If you like my blog posts, you might also like my newsletter.
+    I share articles, conference talks, reading material about Software Shenanigans
+    and Computer Craftsmanship.
+    Subscribe to
+    <a href="https://rlfo.substack.com/" target="_blank">Random Links Found Online</a>
+    and get the latest issue delivered straight to your inbox.
+    </p>
+  </blockquote>
 </div>
-
-<!-- <iframe -->
-<!--     src="https://rlfo.substack.com/embed" -->
-<!--     width="480" -->
-<!--     height="320" -->
-<!--     style="border:1px solid #EEE; background:white;" -->
-<!--     frameborder="0" -->
-<!--     scrolling="no"> -->
-<!-- </iframe> -->
