--- a/static/style.css
+++ b/static/style.css
@@ -44,3 +44,7 @@ textarea.form-control {
 .emoji {
   font-family: Apple Color Emoji, Segoe UI Emoji, NotoColorEmoji, Segoe UI Symbol, Android Emoji, EmojiSymbols;
 }
+
+.newsletter {
+  margin: 40px 0;
+}
