--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -107,6 +107,8 @@ const structuredData = {
       set:html={JSON.stringify(structuredData)}
     />
 
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
