--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -17,7 +17,7 @@ const { page } = Astro.props;
         disabled={!page.url.prev}
         href={page.url.prev as string}
         className={`mr-4 select-none ${page.url.prev ? "" : "disabled"}`}
-        ariaLabel="Previous"
+        ariaLabel="Newer post"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -32,7 +32,7 @@ const { page } = Astro.props;
         disabled={!page.url.next}
         href={page.url.next as string}
         className={`mx-4 select-none ${page.url.next ? "" : "disabled"}`}
-        ariaLabel="Next"
+        ariaLabel="Older post"
       >
         Next
         <svg
